Updates from Overleaf

--- a/Bibliography/Articles.bib
+++ b/Bibliography/Articles.bib
@@ -35,3 +35,13 @@
   year      = {2017},
   note      = {\url{https://arxiv.org/pdf/1412.6980.pdf}}
 } %
+
+@article{Hornik,
+  title     = {Multilayer Feedforward Networks are Universal Approximators},
+  author    = {Kurt Hornik and Maxwell Stinchcombe an Albert White},
+  journal   = {Neural Networks},
+  volume    = {2},
+  number    = {5},
+  year      = {1989},
+  publisher = {Pergamon Press}
+} % https://www.sciencedirect.com/science/article/abs/pii/0893608089900208
