--- a/Include/Appendices/Appendix-B.tex
+++ b/Include/Appendices/Appendix-B.tex
@@ -1,12 +1,15 @@
 \chapter{Graphs}
+\section*{GOOG}
+\imgfig[0.75]{Figures/Pictures/APP1/sigmoid_surface.png}{Implied volatility surface from the neural network using sigmoid as activation function, compared with the test set (orange points)}
+
 \section*{AAPL}
 \imgfig[1]{Figures/Pictures/TAA/hist_AAPL.pdf}{Distribution of strike prices and time to maturity for AAPL.}
 \imgfig[1]{Figures/Pictures/TAA/fejl_aapl.pdf}{MSE, MAE, and MAPE on traning- and validation set for AAPL on 1200 epochs.}
 \imgfig[1]{Figures/Pictures/TAA/pred_real_aapl.pdf}{AAPL's real implied volatility plotted against the predictions of the neural network. The black line is the theoretical best regression whereas the blue line is the achieved regression.}
 
-\imgfig[1]{Figures/Pictures/APP1/Densiteter_AAPL.pdf}{tau = 0.2 og 0.7, int til 0.783 og 0.76.}
+\imgfig[1]{Figures/Pictures/APP1/Densiteter_AAPL.pdf}{Risk-neutral density for current stock price $S_t = 100$ and time to maturity $\tau = 0.02$ (left) and $\tau= 0.07$ (right).}
 
-\imgfig[1]{Figures/Pictures/APP1/KT_AAPL.pdf}{AAPL.}
+\imgfig[1]{Figures/Pictures/APP1/KT_AAPL.pdf}{Distribution of the strike prices and time to maturities for the 100 random points in the test set for AAPL.}
 
 
 
@@ -15,9 +18,9 @@
 \imgfig[1]{Figures/Pictures/TAA/fejl_amzn.pdf}{MSE, MAE, and MAPE on traning- and validation set for AMZN on 1200 epochs.}
 \imgfig[1]{Figures/Pictures/TAA/pred_real_amzn.pdf}{AMZN's real implied volatility plotted against the predictions of the neural network. The black line is the theoretical best regression whereas the blue line is the achieved regression.}
 
-\imgfig[1]{Figures/Pictures/APP1/Densiteter_AMZN.pdf}{tau = 0.2 og 0.7, int til 0.819 og 0.665.}
+\imgfig[1]{Figures/Pictures/APP1/Densiteter_AMZN.pdf}{Risk-neutral density for current stock price $S_t = 100$ and time to maturity $\tau = 0.02$ (left) and $\tau= 0.07$ (right).}
 
-\imgfig[1]{Figures/Pictures/APP1/KT_AMZN.pdf}{AMZN.}
+\imgfig[1]{Figures/Pictures/APP1/KT_AMZN.pdf}{Distribution of the strike prices and time to maturities for the 100 random points in the test set for AMZN.}
 
 
 
@@ -26,9 +29,9 @@
 \imgfig[1]{Figures/Pictures/TAA/fejl_tsla.pdf}{MSE, MAE, and MAPE on traning- and validation set for AAPL on 1200 epochs.}
 \imgfig[1]{Figures/Pictures/TAA/pred_real_tsla.pdf}{TSLA's real implied volatility plotted against the predictions of the neural network. The black line is the theoretical best regression whereas the blue line is the achieved regression.}
 
-\imgfig[1]{Figures/Pictures/APP1/Densiteter_TSLA.pdf}{tau = 0.2 og 0.7, int til 0.54 og 0.647.}
+\imgfig[1]{Figures/Pictures/APP1/Densiteter_TSLA.pdf}{Risk-neutral density for current stock price $S_t = 100$ and time to maturity $\tau = 0.02$ (left) and $\tau= 0.07$ (right).}
 
-\imgfig[1]{Figures/Pictures/APP1/KT_TSLA.pdf}{TSLA.}
+\imgfig[1]{Figures/Pictures/APP1/KT_TSLA.pdf}{Distribution of the strike prices and time to maturities for the 100 random points in the test set for TSLA.}
 
 
 
@@ -43,7 +46,6 @@
 \section*{App2 2}
 \imgfig[1]{Figures/Pictures/Application2/linje_C2.pdf}{GOOG's real option prices plotted against the predictions of the neural network. The black line is the theoretical best regression whereas the blue line is the achieved regression.}
 
-\imgfig{Figures/Pictures/Application2/fejl_c2.pdf}{Error for 100 random points from the test set.}
 
 
 \section*{App2 3}
@@ -51,6 +53,5 @@
 
 \imgfig[1]{Figures/Pictures/Application2/linje_C32.pdf}{GOOG's real option prices plotted against the predictions of the neural network. The black line is the theoretical best regression whereas the blue line is the achieved regression.}
 
-\imgfig{Figures/Pictures/Application2/fejl_c3..pdf}{Error for 100 random points from the test set.}
 
 
