--- a/Include/Frontmatter/Abstract.tex
+++ b/Include/Frontmatter/Abstract.tex
@@ -2,4 +2,10 @@
 % ---------------------------------------------------------------------------------
 % An abstract is a short summary of the report shown on the title page
 \pdfbookmark[1]{Abstract}{Abstract}
+This project is a study of option pricing using numerical methods, such as neural networks and finite difference. Data for the project is obtained from Polygon.io (\url{https://Polygon.io}), with the data obtained being the maturity time, strike price, stock price, and option price.
 
+The project starts with preliminary theory regarding the numerical methods required for the application, particularly neural networks and finite difference.
+
+Application of the theory begins with determining the best architecture for a neural network for the implied volatility function. It then moves on to training the neural network for the implied volatility surface, and using it to determine the risk-neutral density, which is then used to compute option prices. Additionally, multiple neural networks for the option pricing function were constructed, leading to improved results over the other method.
+
+The discussion is primarily focused on improvements for future use, as well as the presumable issues and inconsistencies that arouse during the application.
