--- a/Include/Frontmatter/Preface.tex
+++ b/Include/Frontmatter/Preface.tex
@@ -5,7 +5,7 @@
 \pdfbookmark[0]{Preface}{preface}
 This report is written by group \projectgroup\, at the Department of Mathematical Sciences at Aalborg University, Denmark in the \MakeLowercase{\projectperiod}.
 
-The report's theme is "\projecttheme", in which the group has chosen to work with \projecttitle.
+The report's theme is "\projecttheme", in which the group has chosen to work with numerical methods.
 
 References in the report are written in accordance with the American Psychological Associations (APA) reference system, meaning references in the report are written [Author's last name, year, potential pages/chapters]. For website references, the year indicates the year the article was written, unless that information is unavailable then it is the year the website was last visited.
 
