--- a/Include/Mainmatter/1-Introduction.tex
+++ b/Include/Mainmatter/1-Introduction.tex
@@ -1,14 +1,14 @@
 \chapter{Introduction}\label{Ch.Introduction}
-Millions of investors buy and sell financial derivatives every day, why the subject of pricing financial derivatives has a huge importance. All of these investors pose the same challenges, and have one goal in common, namely generating a profit or at the very least avoiding losses. An intuitive approach is thus, if an investor is able to predict what happens to the prices of the derivatives, then the investor is able to generate a profit. On the contrary, if an investor wrongly predicts the market, they will lose money. Even though the approach is very intuitive, it is not easy in practice as it is influenced by many complex factors. Thus, for an investor to accurately predict prices they must have a deep understanding of the markets underlying factors, such as global economy, supply and demand, and market sentiment. Another approach an investor might take is looking at financial derivatives such as options, as these are often used to manage risk and speculate on future price movements. This indicates that if an investor is able to predict option prices they are able to cover their risk.
+Millions of investors buy and sell financial derivatives every day, why the subject of pricing financial derivatives has a huge importance. All of these investors pose the same challenges, and have one goal in common, namely generating a profit or at the very least avoiding losses. An intuitive approach is thus, if an investor is able to predict what happens to the prices of the derivatives, then the investor is able to generate a profit. On the contrary, if an investor wrongly predicts the market, they will lose money. Even though the approach is very intuitive, it is not easy in practice as price movements are influenced by many complex factors. Thus, for an investor to accurately predict prices they must have a deep understanding of the market's underlying factors, such as global economy, supply and demand, and market sentiment. Another approach an investor might take is looking at financial derivatives such as options, as these are often used to manage risk and speculate on future price movements. This indicates that if an investor is able to predict option prices they are able to manage their risk.
 
-A method to predict option prices is to determine their implied volatility. Given that an investor is able to do so for all strike prices and time to maturities they obtain their implied volatility surface, an example of which can be seen in \autoref{Figures:Figures/Pictures/Volatility Surface Introduction.jpg}. Additionally, given that an investor has obtained the volatility surface, they are able to determine option prices using the Black-Scholes formula. This characteristic is the reason why modelling the implied volatility surface is such a heavily researched subject.
+A method to predict option prices is to determine their implied volatility. Given that an investor is able to do so for all strike prices and time to maturities they obtain an implied volatility surface, an example of which can be seen in \autoref{Figures:Figures/Pictures/Volatility Surface Introduction.jpg}. Additionally, given that an investor has obtained the implied volatility surface, they are able to determine option prices using the Black-Scholes formula, \citep{BS}. This characteristic is one of the reasons why modelling the implied volatility surface is a heavily researched subject.
 
-\imgfig[0.65]{Figures/Pictures/Volatility Surface Introduction.jpg}{Example of a volatility surface with at the money for $K=100$.}
+\imgfig[0.65]{Figures/Pictures/Volatility Surface Introduction.jpg}{Example of an implied volatility surface with at the money around $100$. Source: \url{https://www.quora.com/What-is-volatility-surface}.}
 
-For many years researchers investigated how parametric models could be used to determine the volatility surface, with some of the models not being able to approximate this complex problem. However, in more recent years researchers have investigated how deep learning methods can be implemented to help solve the problem of determining the implied volatility surface, and thus option prices. Especially neural networks have shown promising results for its ability to approximate complex functions and describe the complex relationships between input- and output variables. Additionally, it does all of this whilst still remaining fairly fast due to its fundamental linear algebraic construction. 
+For many years researchers investigated how parametric models could be used to determine the implied volatility surface, with some of the models not being able to approximate this complex problem. However, in more recent years researchers have investigated how deep learning methods can be implemented to help solve the problem of determining the implied volatility surface, and thus option pricing. Especially neural networks have shown promising results for its ability to approximate complex functions and describe the complex relationships between input- and output variables. Additionally, it does all of this whilst still remaining fairly fast due to its fundamental linear algebraic construction. 
 
-The objective of this project is to explore the application of neural networks in option pricing with a focus of implied volatility. Specifically, it will explore how a neural network approach works for different stocks for varying strike prices, and maturity times. By exploring the capabilities of how neural networks can be used in option pricing, the project hopes to provide a deeper understanding of the financial market dynamics, and the development of pricing models. 
+The objective of this project is to explore the application of neural networks in option pricing with a focus on the implied volatility function. Specifically, it will explore how a neural network approach works for different stocks for varying strike prices, and maturity times. By exploring the capabilities of how neural networks can be used in option pricing, the project hopes to provide a deeper understanding of the financial market dynamics, and the development of pricing models. 
 
 
 \section{Problem statement}\label{Sec.Problem_statement}
-How can numeric and deep learning methods be utilised to describe price movements, and what are the advantages and disadvantages of such methods.
+How can numeric methods be utilised to determine option prices, and what are the advantages and disadvantages of such methods.
