--- a/Include/Mainmatter/2-.tex
+++ b/Include/Mainmatter/2-.tex
@@ -1,50 +1,49 @@
 \chapter{Preliminary Theory}\label{Ch.2}
 This chapter is based upon \citep{Hull} and \citep{Cal}, unless stated otherwise.
 
-% Given a financial market in which many derivatives are traded, a common financial problem is pricing these. A general formula for a risk-neutral price of a simple European derivative is $\exp\left(-r\tau\right)\E[\Q]{\Phi(S_T)\mid \mathcal{F}_t}$ where $\Q$ is a \emph{risk-neutral measure}, $r\in\R$ is the risk-free rate, $\Phi(S_T)$ is the pay-off function, $\tau=T-t$ is time to maturity and $\mathcal{F}_t$ is the information on the market at time $t$. In the pay-off function, $S_T$ is the price of the underlying stock at maturity time, $T$. Although knowing the formula, the problem of pricing derivatives is not necessarily trivial as it often requires the investor to know many things about the market. Hence, different methods of determining the price can be used, either based on a model or historical data in which calibration can be used. Within the calibration problem, other factors than the price, sometimes needs to be generated, such as \emph{implied volatility}. For the methods used in this project implied volatility is essential and therefore, before moving on to calibration the subject of implied volatility is introduced. Note that for the remainder of this project the options which will be considered are simple European call options, with pay-off function $\Phi(S_T) = (S_T - K)^+$.
+Given a financial market in which many derivatives are traded, a common financial problem is, as mentioned, pricing these. A general formula for the risk-neutral price of a simple European derivative is $\exp\left(-r\tau\right)\E[\Q]{\Phi(S_T)\mid \mathcal{F}_t}$ where $\Q$ is a \emph{risk-neutral measure}, $r\in\R$ is the risk-free interest rate, $\tau=T-t$ is the time to maturity, $\Phi(S_T)$ is the pay-off function, and $S_T$ is the price of the underlying stock at maturity time, $T$. Additionally, $\mathcal{F}_t$ is the sub-$\sigma$-algebra of $\mathcal{F}$\footnote{The $\sigma$-algebra in the filtered probability space $\left(\Omega,\mathcal{F},\left(\mathcal{F}_t\right)_{t\in[0,T]},\mathbb{P}\right)$} for which $\mathcal{F}_s\subseteq\mathcal{F}_t\subseteq\mathcal{F}$ given $s\leq t\leq T$. The intuition of this sub-$\sigma$-algebra, $\mathcal{F}_t$, is that it represents the information in the market up until a time $t$, hence why it is increasing as time passes.
 
-% Forslag:
-Given a financial market in which many derivatives are traded, a common financial problem is pricing these. A general formula for the risk-neutral price of a simple European derivative is $\exp\left(-r\tau\right)\E[\Q]{\Phi(S_T)\mid \mathcal{F}_t}$ where $\Q$ is a \emph{risk-neutral measure}, $r\in\R$ is the risk-free rate, $\tau=T-t$ is time to maturity, $\Phi(S_T)$ is the pay-off function, and $S_T$ is the price of the underlying stock at maturity time, $T$. Additionally, $\mathcal{F}_t$ is the sub-$\sigma$-algebra of $\mathcal{F}_T$ for which $\mathcal{F}_s\subseteq\mathcal{F}_t\subseteq\mathcal{F}_T$ given $s\leq t\leq T$. The intuition of this sub-$\sigma$-algebra, $\mathcal{F}_t$, is that it represents the information on the market up until a time $t$, hence why it is increasing as time increases.
-
-Even given that an investor knows the formula, the problem of pricing derivatives is trivial, as investors are required to know many complex market factors such as global economic politics, supply and demand, and market sentiment. Hence, another approach is required, such as creating a model that coincides with the market prices. As options are often used to manage risk and speculate on future price movements this will be the focus going forward. As the put-call parity can be used to relay the findings, this project will only focus on simple European call options. Remember that the pay-off function for a simple European call option is $\Phi(S_T) = (S_T - K)^+$. An essential item in option pricing is the \emph{implied volatility}, why the following section will focus on its qualities. %Forslag slut
+Given that an investor knows the formula, the problem of pricing derivatives is not trivial, as investors are required to know many complex market factors such as global economic politics, supply and demand, market sentiment, and \emph{implied volatility}. Hence, a model which depends on these complex market factors is often created such that it coincides with the market prices. These models can also vary depending on which kind of derivative one is working with. As options are often used to manage risk and speculate on future price movements these will be the focus going forward. This project will only focus on simple \emph{European call options}, as the put-call parity can be used to relay the findings. Remember that the pay-off function for a simple European call option is $\Phi(S_T) = (S_T - K)^+$ for strike price $K>0$. As mentioned, one of the complex market factors in option pricing is the implied volatility, why the following section will focus on its properties.
 
 
 \section{Implied Volatility}\label{Sec.Implied_Volatility}
-Implied volatility is often interpreted as the market's prediction of future volatility, and similarly the evolution of the implied volatility is interpreted to reflect how the market responds to new information. However, this does not mean that implied volatility can be used to predict whether or not the price will increase or decrease in the future. Investors can also use the implied volatility to risk manage their portfolio using the Greeks, which can be determined using the Black-Scholes formula. Heuristically what this mean is that an investors is able to measure the option prices sensitivity with respect to time (Theta), volatility (Vega), etc. also making it possible to hedge very accurately. Additionally, given an investor is able to determine the implied volatility, they are able to price options, meaning that for a strike $K$ and time to maturity $\tau=T-t$, they are able to determine the price using the Black-Scholes formula. This can also inverted to calculate the implied volatility, given the price of an option. More precisely, one has to solve
+Implied volatility is commonly understood as the market's expectation or prediction of future volatility. Additionally, the changes in implied volatility are often seen as an indication of how the market reacts to new information. However, this does not mean that implied volatility can be used to predict whether or not the price will increase or decrease in the future. Investors can also use the implied volatility to risk manage their portfolio using the Greeks, which can be determined using the Black-Scholes formula, \citep{BS}. Heuristically what this mean is that an investors is able to measure the option prices sensitivity with respect to time (Theta), volatility (Vega), etc. also making it possible to hedge. Additionally, given an investor is able to determine the implied volatility, they are able to price options, meaning that for a strike $K$ and time to maturity $\tau=T-t$, they are able to determine the price using the Black-Scholes formula. This can also be inverted to calculate the implied volatility, given the price of an option. More precisely, one has to solve
 \begin{align}\label{Eq:IV_formula}
-    C^{M}(t,K) &= C^{BS}\left(t,K,\IV{t,K}\right),\quad t,K>0,
+    C^{M}(t,K) &= C^{BS}\left(t,K,\IV{t,K}\right),\quad \tau,K>0,
 \end{align}
 where $C^{M}\geq0$ is the market's call option price, $C^{BS}\geq0$ is the Black-Scholes call option price on the same underlying stock and $\IV{t,K}>0$ is the implied volatility. In practice, numerical methods such as the Newton Raphson or a similar decent method is used to determine the implied volatility such that it satisfies \eqref{Eq:IV_formula}.
 
-As an investor you might feel indifferent about knowing the implied volatility of a single option as it tells not much, if anything, about the underlying stock. Thus, to give a better understanding of the volatility of the options on an underlying stock investors look at its \emph{implied volatility surface}. The volatility surface makes it possible for investors to what the market expectations are, the supply and demand as well as the sentiment towards the underlying asset. However, for the prices determined from the implied volatility surface to be arbitrage-free, the surface has to be determined from arbitrage-free prices. If this is not the case, these prices might not be arbitrage-free. In \autoref{Figures:Figures/Pictures/Volatility Surface Smile.png} and \autoref{Figures:Figures/Pictures/Volatility Surface Skew.pdf} two examples of what a volatility surface might look like is presented. 
+As an investor you might not only be interested in knowing the value of the implied volatility of a single option. Thus, to give a better understanding of the implied volatility of the options on an underlying stock investors look at its \emph{implied volatility surface}. The volatility surface makes it possible for investors to get an idea of what the market expectations are, the supply and demand as well as the sentiment towards the underlying asset. However, for the prices determined from the implied volatility surface to be arbitrage-free, the surface has to be determined from arbitrage-free prices. If this is not the case, these prices might not be arbitrage-free. In \autoref{Figures:Figures/Pictures/Volatility Surface Smile.png} and \autoref{Figures:Figures/Pictures/Volatility Surface Skew.pdf} two examples of what an implied volatility surface might look like is presented. These two implied volatility surfaces are created from data with a current underlying stock price of $100$.
 
-\dimgfig{Figures/Pictures/Volatility Surface Smile.png}{Volatility surface with underlying stock price $S_t=100$, strike price, $K$, and time to maturity, $\tau=T-t$.}{Figures/Pictures/Volatility Surface Skew.pdf}{Volatility surface with underlying stock price $S_t=100$, strike price, $K$, and time to maturity, $\tau=T-t$.}
+\dimgfig{Figures/Pictures/Volatility Surface Smile.png}{Implied volatility surface with current underlying stock price $S_t=100$, strike price, $K$, and time to maturity, $\tau=T-t$.}{Figures/Pictures/Volatility Surface Skew.pdf}{Implied volatility surface with current underlying stock price $S_t=100$, strike price, $K$, and time to maturity, $\tau=T-t$.}
 
-As is evident in \autoref{Figures:Figures/Pictures/Volatility Surface Smile.png}, the closer the options get to maturity, the more symmetric around at the money (ATM) it becomes, closely resembling what is known as the \emph{volatility smile}. What this means heuristically is that the options ATM have lower implied volatility than out the money (OTM) and in the money (ITM). In \autoref{Figures:Figures/Pictures/Volatility Surface Skew.pdf} something different occurs, namely that close to maturity it does not resemble the volatility smile. This \emph{volatility skew}, as it is called, can be caused by numerous factors such as the supply and demand, price sensitivities to changes in the underlying asset's price etc. Focusing on the supply and demand factor, it would in \autoref{Figures:Figures/Pictures/Volatility Surface Skew.pdf} mean that the demand for options OTM is larger than the demand for options ITM.
+It is evident in \autoref{Figures:Figures/Pictures/Volatility Surface Smile.png}, the closer the options get to maturity, the more symmetric around at the money (ATM) it becomes, closely resembling what is known as the \emph{volatility smile}. What this means heuristically is that the options ATM have lower implied volatility than those out the money (OTM) and in the money (ITM). In \autoref{Figures:Figures/Pictures/Volatility Surface Skew.pdf} something different occurs, namely that close to maturity it does not resemble the volatility smile but instead a \emph{volatility skew}. This volatility skew, as it is called, can be caused by numerous factors such as the supply and demand, price sensitivities to changes in the underlying asset's price etc. Focusing on the supply and demand factor, it would in \autoref{Figures:Figures/Pictures/Volatility Surface Skew.pdf} mean that the demand for options OTM is larger than the demand for options ITM.
 
-Again, given that an investor is able to determine the markets implied volatility surface this can be used to determine prices, which can be achieved either by using a model or historical data. For both determining the function for the implied volatility surface and the option price, calibration can, as previously mentioned, be used.
+Again, given that an investor is able to determine the markets implied volatility surface this can be used to determine prices, which can be achieved either by using a model, historical data, or both. For both determining the function for the implied volatility and the option price, \emph{calibration} can be used, which will be elaborated further upon in the following section.
 
 
 \section{Calibration}\label{Sec.Calibration}
-Calibration, in finance, is the process of estimating the dynamics of the risk-neutral measure. Calibration refers to the process of adjusting model parameters to adjust the model's predictions to observed market data or known values, to ensure that the model accurately reflects real-world conditions. In finance, calibration is commonly used with financial models, such as option pricing models. To clarify what is meant by the above, consider a financial market in which prices can be described by a model $\pazocal{P}\left(\theta,\alpha\right)$. In this model, $\theta$ represents the model's $n$ parameters and $\alpha$ represents the derivatives fixed parameters such as maturity time and risk-free interest rate. Thus, given $\alpha$, there must exist a associated $\widehat{\theta}$ such that $\pazocal{P}\left(\widehat{\theta},\alpha\right)$ is exactly the market price. This also implies that given a market price and $\alpha$ then one should be possible to determine $\widehat{\theta}$. This is what is known as \emph{model calibration} as it requires a model. Formally, this can be described as
+Calibration, in finance, is the process of estimating the dynamics under the risk-neutral measure. Calibration refers to the process of adjusting model parameters to modify the model's predictions to observed market data or known values, to ensure that the model accurately reflects real-world conditions. In finance, calibration is commonly used with financial models, such as option pricing models. Consider a financial market in which option prices can be described by a model $\pazocal{P}\left(\bm\theta,\bm\beta\right)$. In this model, $\bm\theta$ represents the model's $n$ unknown parameters and $\bm\beta$ represents the options fixed parameters such as maturity time and risk-free interest rate. Thus, given $\bm\beta$, there must exist an associated $\widehat{\bm\theta}$ such that $\pazocal{P}\left(\widehat{\bm\theta},\bm\beta\right)$ is exactly the market price. This also implies that given a market price and $\bm\beta$, one should be able to determine $\widehat{\bm\theta}$. This is what is known as \emph{model calibration} as it requires a model. Formally, the problem of determining the model parameters can be described as
 \begin{align*}
-    \widehat{\theta} &= \arg\min_{\theta\in\Theta}\pazocal{C}\left(\pazocal{P}\left(\theta,\alpha\right),\pazocal{P}\left(\widehat{\theta},\alpha\right)\right),
+    \widehat{\bm\theta} &= \arg\min_{\bm\theta\in\Theta}\pazocal{C}\left(\pazocal{P}\left(\bm\theta,\bm\beta\right),\pazocal{P}\left(\widehat{\bm\theta},\bm\beta\right)\right),
 \end{align*}
-where $\pazocal{C}$ is a suitable metric and $\Theta\subseteq\R^n$ represents the set for which the model's constraints are fulfilled. Naturally, this methodology is easier given a model which has a closed-form solution, such as the Black-Scholes model, whereas for other models, with no closed-form solutions, $\widehat{\theta}$ has to solved numerically. This also has the implication that as data sets get larger, the slower the numerical approach becomes \citep{Art}.
+where $\pazocal{C}$ is a suitable metric and $\Theta\subseteq\R^n$ represents the set for which the model's constraints are fulfilled. Naturally, this methodology is easier given a model which has a closed-form solution, such as the Black-Scholes model, whereas for other models, with no closed-form solutions, $\widehat{\bm\theta}$ has to be determined numerically.
 
-Another calibration method, which does not require a model, but only market prices is the \emph{risk-neutral calibration}, which has its foundation in the general pricing formula, presented in the beginning. Thus, given that one is working with simple \emph{European options}, and the existence of the risk-neutral density, then the pricing formula is equal to
+Another calibration method, which does not require a model, but only market data is the \emph{risk-neutral calibration}, which has its foundation in the general pricing formula, presented in the beginning. Thus, given that one is working with simple European call options, and there exists a \emph{risk-neutral density}, then the pricing formula is equal to
 \begin{align}\label{Eq:RND_Pricing}
     C(t,K) &= \exp\left(-r\tau\right)\E[\Q]{\Phi(S_T)\mid S_t} = \exp\left(-r\tau\right)\int_\R(S_T-K)^+f^\Q(S_T\mid S_t)\,\mathrm{d}S_T,
 \end{align}
-given $K,T>0$ and $\tau=T-t\geq0$. On the right hand side of \eqref{Eq:RND_Pricing}, the only unknown is the risk-neutral density function $f^\Q$, which represents the conditional distribution of $S_T$ given the price $S_t$ for $t<T$. Hence, if one can determine this function one is able to describe how option prices behave under the risk-neutral measure $\Q$. One notices that differentiating the right hand side of \eqref{Eq:RND_Pricing} with respect the strike price twice for $K=S_T$ yields
+given $K,T>0$ and $T>t$. On the right hand side of \eqref{Eq:RND_Pricing}, the only unknown is the risk-neutral density function $f^\Q$, which represents the conditional distribution of $S_T$ given the price $S_t$. Hence, if one can determine this risk-neutral density function one is able to describe how option prices behave under the risk-neutral measure $\Q$. Differentiating the right hand side of \eqref{Eq:RND_Pricing} with respect to the strike price twice for $K=S_T$ yields
 \begin{align}\begin{aligned}\label{Eq:PartialC}
-    \frac{\partial^2}{\partial K^2}C(t,K) &= \exp\left(-r\tau\right)\frac{\partial}{\partial K}\int_K^\infty -f(S_T\mid S_t)\,\mathrm{d}S_T\\
+    \frac{\partial^2}{\partial K^2}C(t,K) &= \exp\left(-r\tau\right)\frac{\partial}{\partial K}\int_K^\infty -f^\Q(S_T\mid S_t)\,\mathrm{d}S_T\\
     &=\exp\left(-r\tau\right)f^\Q(S_T\mid S_t).
 \end{aligned}\end{align}
-Hence, if one is able to determine $\partial^2C(t,K)/\partial K^2$, then one can also determine $f^\Q$. Another way of writing $\partial^2C(t,K)/\partial K^2$ can be derived using the multivariate chain rule and \eqref{Eq:IV_formula}. Thus,
+Hence, being able to determine $\frac{\partial^2}{\partial K^2}C(t,K)$, it is also possible to derive $f^\Q$. Another way of writing $\frac{\partial^2}{\partial K^2}C(t,K)$ can be derived using the multivariate chain rule and \eqref{Eq:IV_formula}. Thus,
 \begin{align}\begin{split}\label{Eq:RND_Derivatives}
     \frac{\partial^2}{\partial K^2} C(t,K) &= \frac{\partial}{\partial K}\left(\frac{\partial}{\partial K} C^{BS}\left(t,K,\IV{t,K}\right) + \frac{\partial}{\partial\IV{t,K}} C^{BS}\left(t,K,\IV{t,K}\right)\frac{\partial}{\partial K}\IV{t,K}\right)\\
     &= \frac{\partial^2}{\partial K^2}C^{BS}\left(t,K,\IV{t,K}\right)+2\frac{\partial^2}{\partial K\partial\IV{t,K}}C^{BS}\left(t,K,\IV{t,K}\right)\frac{\partial}{\partial K}\IV{t,K}\\
     &\phantom{=} +\frac{\partial^2}{\partial\left(\IV{t,K}\right)^2}C^{BS}\left(t,K,\IV{t,K}\right)\left(\frac{\partial}{\partial K}\IV{t,K}\right)^2\\&\phantom{=} +\frac{\partial}{\partial\IV{t,K}}C^{BS}\left(t,K,\IV{t,K}\right)\frac{\partial^2}{\partial K^2}\IV{t,K}.
 \end{split}\end{align}
-Hence, one only has to determine $\IV{t,K}$ as well as its derivatives to determine $f^\Q$, since the Black-Scholes formula has a closed-form solution, and its derivatives can thus be derived. On the contrary, the implied volatility, $\IV{t,K}$, does not have a closed form solution as it has to be approximated numerically. In the project's application this will be done using \emph{neural networks}, whilst its derivatives will be determined using the \emph{finite difference} method, both elaborated further upon in \autoref{Ch.3} and \autoref{Ch.4}, respectively.
+Thus, one only has to determine $\IV{t,K}$ as well as its derivatives to determine $f^\Q$, since the Black-Scholes formula has a closed-form solution, and its derivatives are known. On the contrary, the implied volatility, $\IV{t,K}$, does not have a closed form solution meaning it has to be approximated numerically. In the project's application this will be done using \emph{neural networks}, whilst its derivatives will be determined using the \emph{finite difference} method, both elaborated further upon in \autoref{Ch.3} and \autoref{Ch.4}, respectively.
+
+\input{Include/Mainmatter/4-}
