--- a/Include/Mainmatter/Conclusion.tex
+++ b/Include/Mainmatter/Conclusion.tex
@@ -1,18 +1,14 @@
 \chapter{Conclusion}\label{Ch.Conclusion}
-
-
-%How can numeric and deep learning methods be utilised to describe price movements, and what are the advantages and disadvantages of such methods.
-
 % Theory
-Throughout the project, theory regarding calibration, finite difference, and neural networks have been introduced and applied. What these methods have in common is that they can all be performed numerically, meaning that even given a problem which does not have an analytical solution, these methods can be used to approximate a solution. More precisely, it has been described how neural networks can be used as function approximators, in our case for the function of the implied volatility or the option prices. Furthermore, theory of how the implied volatility can be used to derive the risk-neutral density function which can then be used to predict option prices. 
+Throughout the project, theory regarding calibration, finite difference, and neural networks have been introduced and applied. What these methods have in common is that they are all numerical methods, meaning that even given a problem which does not have an analytical solution, these methods can be used to approximate a solution. More precisely, it has been described how neural networks can be used as function approximators, where they, in this project, have been used to approximate both the function of the implied volatility and the option prices. Furthermore, theory regarding how the implied volatility can be used to derive the risk-neutral density function has been introduced. Moreover, it was described how this density could be used to predict option prices. 
 
-It has been shown in \autoref{Ch.5} that it is possible to estimate an implied volatility surface with a quite good accuracy with a maximum error of $5\%$. Moreover, it could be concluded that when using the implied volatility, its derivatives, found by using finite difference, and derivatives of the Black Scholes option price formula, the risk-neutral density was not a smooth curve integrating to one as wanted. Especially when diverging from ATM the densities became more and more distorted and fluctuated more significantly. This also affected the prices predicted using the risk-neutral density as these had a mean percentage error of at least $100\%$. Hence, concluding that this method did not give ideal results, probably caused by multiple different factors such as using many numerical methods or missing data.
+As shown in \autoref{Ch.5}, it is possible to approximate an implied volatility surface with good accuracy with a maximum error of $6.4\%$. Moreover, it could be concluded that when using the implied volatility, its derivatives, determined by finite difference, and derivatives of the Black Scholes option pricing formula, the risk-neutral density was not a smooth curve integrating to one as desired. Especially when diverging from ATM the risk-neutral densities became increasingly distorted and fluctuated more significantly. This also affected the option prices predicted using the risk-neutral density, as these had a mean percentage error of at least $100\%$. Hence, concluding that this method did not give ideal results, presumably caused by multiple different factors such as using multiple numerical methods or insufficient data.
 
 % Neural networks
-Additionally, as shown in \autoref{Ch:app2} it is also possible to directly construct a neural network for option prices. This method achieved better results than the other method, with a mean percentage error of at most $10\%$. Specifically, the neural network which had strike price, time to maturity, and stock price as input variables performed better than the ones without stock price as an input.
+Additionally, as shown in \autoref{Ch:app2}, it is also possible to directly construct a neural network for the option pricing function. This method achieved better results than the other method, with a mean percentage error of at most $10\%$. Specifically, the neural network which had strike price, time to maturity, and stock price as input variables performed better than the ones without stock price as an input.
 
-We can further conclude that there are both advantages and disadvantages of using these methods. A clear disadvantage of using neural networks is that there is a possibility to return option prices that are not arbitrage-free. This is not desirable and could perhaps be mitigated given higher quality data given that one were to work with it in the future. Furthermore, it is clear that using multiple numerical methods followed by each other results in a large percentage error. However, there are also some advantages, such as the fast computations and as seen in \autoref{Ch:app2} when using only few approximations the method gives a good prediction of the option prices. 
+We can further conclude that there are both advantages and disadvantages of using these methods. A clear disadvantage of using neural networks is that there is a possibility of them predicting option prices that are not arbitrage-free. This is not desirable and could perhaps be mitigated given higher quality data given that one were to work with it in the future. Furthermore, it is clear that using multiple numerical methods followed by each other results in a large percentage error. However, there are also some advantages, such as the fast computations and as seen in \autoref{Ch:app2} when using only few approximations the method gives a good prediction of the option prices. 
 
 % Summary
-In short, numerical methods are powerful as well as useful tools for numerous applications. For example, neural networks are useful when estimating complex functions. Naturally, it has its disadvantages such as the possibility to yield arbitrage prices, its time-consuming construction and the data requirements. However, it also has many advantages over other methods, as it is very fast due to its linear algebraic foundation. 
+In short, numerical methods are powerful as well as useful tools for numerous applications. For example, neural networks are useful when estimating complex functions. Naturally, it has its disadvantages such as the possibility to yield arbitrage prices, its time-consuming construction and the data requirements. However, it also has many advantages over other methods, as it is very fast due to its linear algebraic foundation. Additionally, given the resources it could be an interesting topic for conducting further research.
 
