--- a/master.tex
+++ b/master.tex
@@ -3,7 +3,7 @@
 
 \def \projecttitle       {Numerical Option Pricing}
 \def \projectsubtitle    {Using Neural Networks}
-\def \projecttheme       {Calibration}
+\def \projecttheme       {Option Pricing}
 \def \projectdegree      {Mathematics-Economics}
 \def \projectperiod      {Spring Semester of 2023}
 \def \projectnumber      {P8}
@@ -37,14 +37,10 @@
 % 
  \include{Include/Mainmatter/3-}
 
-% 
- \include{Include/Mainmatter/4-}
-
 % Application
  \include{Include/Mainmatter/5.1-}
- \input{Include/Mainmatter/5.2-}
  \include{Include/Mainmatter/6-}
- \include{Include/Mainmatter/7-}
+ 
 % Concluding element
  \include{Include/Mainmatter/Discussion}
  \include{Include/Mainmatter/Conclusion}
