--- a/Figures/TikZ/Neural2.tex
+++ b/Figures/TikZ/Neural2.tex
@@ -62,7 +62,7 @@
   \draw[connect arrow,mygreen!20!] (0.45,1.72) -- (0.9,-2.2);
   %\draw[connect arrow] (\NO-0.25,\NO+0.24) -- (\NO,-0.6);
   \draw[connect,white,line width=4] (0.75,1.75) -- (0.75,1.2);
-  \node[] at (1-0.25,1.45) {\contour{white}{$w_{1,0}^{(1)}$}};
+  \node[] at (1-0.25,1.45) {\contour{white}{$b_{1}^{(1)}$}};
   
     % HIDDEN LAYER
   \foreach \i [evaluate={\c=int(\i==\NH); \y=(\NH/2-\i-\c*\yshift); \index=(\i<\NH?int(\i):"K_1");}]
@@ -93,7 +93,7 @@
   \draw[connect arrow,mygreen!20!] (1.45,1.72) -- (1.9,-2.2);
   %\draw[connect arrow] (\NO-0.25,\NO+0.24) -- (\NO,-0.6);
   \draw[connect,white,line width=4] (1.75,1.75) -- (1.75,1.2);
-  \node[] at (1.75,1.45) {\contour{white}{$w_{1,0}^{(2)}$}};
+  \node[] at (1.75,1.45) {\contour{white}{$b_{1}^{(2)}$}};
   
   % HIDDEN LAYER 2
   \foreach \i [evaluate={\c=int(\i==\NHto); \y=(\NHto/2-\i-\c*\yshift); \index=(\i<\NHto?int(\i):"K_2");}]
@@ -124,7 +124,7 @@
   \draw[connect arrow,mygreen!20!] (2.45,1.72) -- (2.9,-2.2);
   %\draw[connect arrow] (\NO-0.25,\NO+0.24) -- (\NO,-0.6);
   \draw[connect,white,line width=4] (2.75,1.75) -- (2.75,1.2);
-  \node[] at (2.75,1.45) {\contour{white}{$w_{1,0}^{(3)}$}};
+  \node[] at (2.75,1.45) {\contour{white}{$b_{1}^{(3)}$}};
   
   % HIDDEN LAYER 3
   \foreach \i [evaluate={\c=int(\i==\NHtre); \y=(\NHtre/2-\i-\c*\yshift); \index=(\i<\NHtre?int(\i):"K_3");}]
@@ -154,7 +154,7 @@
   \draw[connect arrow,mygreen!20!] (3.3,1.72) -- (3.9,-1.57);
   %\draw[connect arrow] (\NO-0.25,\NO+0.24) -- (\NO,-0.6);
   \draw[connect,white,line width=4] (3.45,1.5) -- (3.9,1.2);
-  \node[] at (3.55,1.44) {\contour{white}{$w_{1,0}^{(4)}$}};
+  \node[] at (3.55,1.44) {\contour{white}{$b_{1}^{(4)}$}};
   
   % OUTPUT LAYER
   \foreach \i [evaluate={\c=int(\i==\NO); \y=(\NO/2-\i-\c*\yshift); \index=(\i<\NO?int(\i):"K_{4}");}]
